--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,11 @@ include_directories(${CMAKE_BINARY_DIR}
     cryptonote/external
     cryptonote/include
     cryptonote/src)
+    
+    if(WIN32)
+     set (Qt5Gui_DIR "C:\\Qt\\5.9.5\\msvc2017_64\\lib\\cmake\\Qt5Gui\\")
+     set (Qt5Widgets_DIR "C:\\Qt\\5.9.5\\msvc2017_64\\lib\\cmake\\Qt5Widgets\\")
+ endif(WIN32)
 
 find_package(Qt5Gui REQUIRED)
 find_package(Qt5Widgets REQUIRED)
